2010-12-23  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Darin Adler.

        queryCommandValue("FormatBlock") does not respect editing boundaries
        https://bugs.webkit.org/show_bug.cgi?id=51219

        Added test cases to ensure queryCommandValue("FormatBlock") respects editing boundaries.

        * editing/execCommand/query-format-block-expected.txt:
        * editing/execCommand/script-tests/query-format-block.js:
2010-12-23  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Darin Adler.

        queryCommandValue("FormatBlock") does not respect editing boundaries
        https://bugs.webkit.org/show_bug.cgi?id=51219

        Fixed the bug by checking the element we found in elementForFormatBlockCommand
        does not contain the editable root.

        * editing/FormatBlockCommand.cpp:
        (WebCore::FormatBlockCommand::elementForFormatBlockCommand):

Canonical link: https://commits.webkit.org/64942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74603 268f45cc-cd09-0410-ab3c-d52691b4dbfc